deploy/k8s/gke/notifications/notifications-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications
spec:
  selector:
      matchLabels:
        app: notifications
  replicas: 1
  template:
      metadata:
        labels:
            app: notifications
      spec:
        containers:
        - name: notifications
          image: vany0114/duber.trip.notifications
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              port: 80
              path: /liveness
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readiness
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 5
          ports:
          - containerPort: 80
