deploy/k8s/gke/notifications/notifications-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifications
spec:
  selector:
    app: notifications
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
