deploy/k8s/gke/notifications/notifications-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: notifications
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-path: /notifications/
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: notifications
          servicePort: 80
        path: /notifications/(.*)
